--- a/shop.html
+++ b/shop.html
@@ -5,12 +5,14 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles.css">
+    <script src="jquery.js"></script>
     <script src="store.js" async></script>
   </head>
   <body>
     <div class='header'>
       <span>FICTIONAL STORE</span>
     </div>
+    <div class="demo" id="demo"></div>
     <div class="floating-cart"><a href="#cart" class="floating-cart-text">Cart</a></div>
     <div class='container'>
           <!-- Loading screen-->
