--- a/shop.html
+++ b/shop.html
@@ -38,10 +38,10 @@
         <div class="options-slot options-filter-items options-btn">
           <span>Filter</span>
           <div class="filter-list">
-            <input type="checkbox" id="cat01"><label for="cat01">Books</label><br>
-            <input type="checkbox" id="cat02"><label for="cat02">Coffee mugs</label><br>
-            <input type="checkbox" id="cat03"><label for="cat03">Instruments</label><br>
-            <input type="checkbox" id="cat04"><label for="cat04">Plants</label><br>
+            <input type="checkbox" id="cat01" class="cat-books"><label for="cat01">Books</label><br>
+            <input type="checkbox" id="cat02" class="cat-coffeeMugs"><label for="cat02">Coffee mugs</label><br>
+            <input type="checkbox" id="cat03" class="cat-instruments"><label for="cat03">Instruments</label><br>
+            <input type="checkbox" id="cat04" class="cat-plants"><label for="cat04">Plants</label><br>
             <button type="button" class="btn-blue filter-btn">Apply filter</button>
           </div>
         </div>
