Created the sorting function. Now the content of the page can be sorted

--- a/shop.html
+++ b/shop.html
@@ -84,10 +84,10 @@
         <div class='cart-row cart-total'>
           <span>Cart is empty</span>
         </div>
-        <button type="button" class="purchase-btn btn-blue">Proceed to checkout</button>
+        <button type="button" class="purchase-btn btn-blue"><a href="#checkout">Proceed to checkout</a></button>
       </div>
 
-      <div class="checkout">
+      <div class="checkout" id="checkout">
         <h1>Checkout</h1>
         <div class="checkout-container">
           <div class="order-details">
