Added the page-number appending function

--- a/shop.html
+++ b/shop.html
@@ -30,7 +30,8 @@
       <div class="pages-container">
         <span class="btn-pages pages-to-first">&lt;&lt;</span>
         <span class="btn-pages pages-back">&lt;</span>
-        <span class="pages-current-page">1</span>
+        <div class="pages-numbers">
+        </div>
         <span class="btn-pages pages-next">&gt;</span>
         <span class="btn-pages pages-to-last">&gt&gt;</span>
       </div>
@@ -57,8 +58,8 @@
         <div class="options-slot options-page-quantity">
           <span>Items per page:</span>
           <select name="page-quantity" class="page-quantity">
-            <option class="sel-op" value="5">5</option>
-            <option class="sel-op" value="10">10</option>
+            <option class="sel-op" value="2">2</option>
+            <option class="sel-op" value="4">4</option>
             <option class="sel-op" value="20">20</option>
           </select>
         </div>
