--- a/public/shop.html
+++ b/public/shop.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FICTIONAL | A store you can only imagine</title>
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link type="image/x-icon" rel="icon" href="public/favicon.ico">
@@ -22,7 +23,13 @@
   </div>
   <!-- Loading screen-->
     <div class='header'>
-      <span>FICTIONAL STORE</span>
+      <span>FICTIONAL</span>
+    </div>
+    <div class="navigation-bar">
+      <div class="logo"></div>
+      <a href="/">Store</a>
+      <a href="#">Check order</a>
+      <a href="#">Management</a>
     </div>
     <div class="demo" id="demo"></div>
     <div class="floating-cart"><a href="#cart" class="floating-cart-text">Cart</a></div>
