4Admin - Orders page now loads all orders from .data folder

--- a/public/shop.html
+++ b/public/shop.html
@@ -27,9 +27,10 @@
     </div>
     <div class="navigation-bar">
       <div class="logo"></div>
+      <a class="username" href="/dashboard"></a>
       <a href="/">Store</a>
       <a href="/checkOrder">Check order</a>
-      <a href="#">Management</a>
+      <a href="#" id="management">Management</a>
     </div>
     <div class="demo" id="demo"></div>
     <div class="floating-cart"><a href="#cart" class="floating-cart-text">Cart</a></div>
