Fixed the bugs in editing orders

--- a/public/employeeDashboard.html
+++ b/public/employeeDashboard.html
@@ -22,14 +22,21 @@
   <div class='container'>
     <h1>Admin dashboard</h1>
     <div class='admin-dashboard-wrapper'>
-        <div class='admin-dashboard-item'>
-            <a href="/orders">Orders</a><br>
+        <a href="/orders" class='admin-dashboard-item'>
+            <img src="public/icons/dash-orders.png"><br>
+            <span><b>Orders</b><br>
             <span>Check, confirm, delete orders</span>
-        </div>
-        <div class='admin-dashboard-item'>
-            <a href='/products'>Products</a><br>
-            <span>Create, edit and delete products</span>
-        </div>
+        </a>
+        <a href="/products" class='admin-dashboard-item'>
+          <img src="public/icons/dash-products.png"><br>
+          <span><b>Products</b><br>
+          <span>Create, edit and delete products</span>
+        </a>
+        <a href="/employees" class='admin-dashboard-item'>
+        <img src="public/icons/dash-employees.png"><br>
+        <span><b>Employees</b><br>
+        <span>Add or delete users</span>
+        </a>
     </div>
   </div>
   <div class='footer'>
