--- a/public/orders.html
+++ b/public/orders.html
@@ -21,6 +21,7 @@
   </div>
   <div class='container'>
     <h1>Orders</h1>
+    <div class='orders-table-error'></div>
     <table id='table-orders'>
     <tr>
         <th>Order ID</th>
