Certificates were added

--- a/public/orderSent.html
+++ b/public/orderSent.html
@@ -6,12 +6,13 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link type="image/x-icon" rel="icon" href="public/favicon.ico">
     <link rel="stylesheet" type="text/css" href="public/styles.css">
+    <title>FICTIONAL | Order Sent</title>
     <script src="public/jquery.js"></script>
     <script type="text/javascript" charset="utf-8" src="public/store.js" async></script>
   </head>
   <body>
     <div class='header'>
-      <span>FICTIONAL STORE</span>
+      <span>FICTIONAL</span>
     </div>
 
     <div class='container'>
