--- a/public/checkOrder.html
+++ b/public/checkOrder.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link type="image/x-icon" rel="icon" href="public/favicon.ico">
     <link rel="stylesheet" type="text/css" href="public/styles.css">
+    <title>FICTIONAL | Check order status</title>
     <script src="public/jquery.js"></script>
     <script type="text/javascript" charset="utf-8" src="public/store.js" async></script>
   </head>
