Testing. Page navigation bug fixed

--- a/public/orderSent.html
+++ b/public/orderSent.html
@@ -19,7 +19,8 @@
       
       <div class="order-sent-text">
         <h1>Order was sent</h1>
-        <span>Your order was sent. Payment details will be sent to your e-mail soon. <br> Thank you for consuming!</span><br>
+        <span>Your order was sent. Payment details will be sent to your e-mail soon. <br> Thank you for stopping by!</span><br>
+        <span style="font-size:0.8em"><b>Developers note:</b> The e-mail settings are not set, check your console for your order ID</span><br>
         <button type="button" class="btn-blue btn-toStore"><a href="/">Go back shopping</a></button>
       </div>
 
