--- a/public/checkOrder.html
+++ b/public/checkOrder.html
@@ -7,8 +7,7 @@
     <link type="image/x-icon" rel="icon" href="public/favicon.ico">
     <link rel="stylesheet" type="text/css" href="public/styles.css">
     <title>FICTIONAL | Check order status</title>
-    <script src="public/jquery.js"></script>
-    <script type="text/javascript" charset="utf-8" src="public/store.js" async></script>
+    <script type="text/javascript" charset="utf-8" src="public/store.js" defer></script>
   </head>
   <body>
     <div class='header'>
