--- a/public/employeeLogin.html
+++ b/public/employeeLogin.html
@@ -7,8 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link type="image/x-icon" rel="icon" href="public/favicon.ico">
     <link rel="stylesheet" type="text/css" href="public/styles.css">
-    <script src="public/jquery.js"></script>
-    <script type="text/javascript" charset="utf-8" src="public/store.js" async></script>
+    <script type="text/javascript" charset="utf-8" src="public/store.js" defer></script>
   </head>
   <body>
     <div class='header'>
