--- a/public/shop.html
+++ b/public/shop.html
@@ -7,8 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link type="image/x-icon" rel="icon" href="public/favicon.ico">
     <link rel="stylesheet" type="text/css" href="public/styles.css">
-    <script src="public/jquery.js"></script>
-    <script type="text/javascript" charset="utf-8" src="public/store.js" async></script>
+    <script type="text/javascript" charset="utf-8" src="public/store.js" defer></script>
   </head>
   <body>
   <!-- Loading screen-->
@@ -46,10 +45,10 @@
         <div class="options-slot options-filter-items options-btn">
           <span>Filter</span>
           <div class="filter-list">
-            <input type="checkbox" id="cat01" class="cat-books"><label for="cat01">Books</label><br>
-            <input type="checkbox" id="cat02" class="cat-coffee-mugs"><label for="cat02">Coffee mugs</label><br>
-            <input type="checkbox" id="cat03" class="cat-instruments"><label for="cat03">Instruments</label><br>
-            <input type="checkbox" id="cat04" class="cat-plants"><label for="cat04">Plants</label><br>
+            <input type="checkbox" id="cat01" class="cat-Books"><label for="cat01">Books</label><br>
+            <input type="checkbox" id="cat02" class="cat-Coffee-mugs"><label for="cat02">Coffee mugs</label><br>
+            <input type="checkbox" id="cat03" class="cat-Instruments"><label for="cat03">Instruments</label><br>
+            <input type="checkbox" id="cat04" class="cat-Plants"><label for="cat04">Plants</label><br>
             <button type="button" class="btn-blue filter-btn">Apply filter</button>
           </div>
         </div>
