'Filter-List' bug fixed. NotFound page added

--- a/public/shop.html
+++ b/public/shop.html
@@ -109,7 +109,7 @@
             <span>Address line 2:</span>
             <input type="textbox" name="address-line-two" id="inputAddTwo" placeholder="City, State, Country" required><br>
             <div class="agreement-field">
-              <input type='checkbox' name="agreement" id="agreement" checked>
+              <input type='checkbox' name="agreement" id="agreement">
               <label for="agreement">I agree with <a href="#" target="_blank">terms and agreements</a></label>
             </div><br>
             <span style="font-size:0.8em">* - required fields</span><br>
