--- a/public/employeeLogin.html
+++ b/public/employeeLogin.html
@@ -28,7 +28,7 @@
                 <input type="text" name="employeeUsername" id="employeeUsername" value="admin"><br>
                 <span>Enter your password:</span><br>
                 <input type="password" name="employeePassword" id="employeePassword" value="admin"><br>
-                <button type="submit" class="employee-login-btn btn-blue">Login</button>
+                <button type="submit" id="login-btn" class="employee-login-btn btn-blue">Login</button>
             </form>
             <div class="errText"></div>
         </div>
