Navigation bar refactored to be responsive

--- a/public/employeeLogin.html
+++ b/public/employeeLogin.html
@@ -15,6 +15,12 @@
     </div>
     <div class="navigation-bar">
       <a class="username" href="/dashboard"></a>
+      <div class="closeNav">X</div>
+      <div class="toggleNav">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
       <a href="/">Store</a>
       <a href="/checkOrder">Check order</a>
       <a href="#" id="management">Management</a>
