--- a/public/shop.html
+++ b/public/shop.html
@@ -26,6 +26,12 @@
     </div>
     <div class="navigation-bar">
       <a class="username" href="/dashboard"></a>
+      <div class="closeNav">X</div>
+      <div class="toggleNav">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
       <a href="/">Store</a>
       <a href="/checkOrder">Check order</a>
       <a href="#" id="management">Management</a>
@@ -114,7 +120,6 @@
               <label for="agreement">I agree with <a href="#" target="_blank">terms and agreements</a></label>
             </div>
             <span style="font-size:0.8em">* - required fields</span><br>
-            <span style="font-size:0.9em">Make sure that your order is correctly formed on the bill at right</span>
             <button type="submit" class="order-send-btn btn-blue">Confirm order</button>
           </form>
           <div class="order-bill">
