DELETE requests are completed

--- a/public/orders.html
+++ b/public/orders.html
@@ -14,10 +14,12 @@
   <a href="/users">Users</a>
   <a href="/products">Products</a>
 </div>
+<div class="confirm-modal-container"></div>
+
+<div class="err-container"></div>
 
   <div class='container'>
     <h1>Orders</h1>
-    <div class="err-container"></div>
     <table id='table-orders'>
     <tr>
         <th>Order ID</th>
