--- a/public/products.html
+++ b/public/products.html
@@ -16,6 +16,9 @@
 </div>
 
 <div class='add-new-product'>Add new</div>
+<div class="err-container"></div>
+
+<div class="confirm-modal-container"></div>
 
 <div class="products-modal">
   <div class="modal-black"></div>
@@ -46,31 +49,10 @@
         <div class="product-form-error"></div>
       </div>
   </form>
-
-  <!-- <form action="#" id='product-edit-form' class='product-form'>
-      <span><b>Edit product:</b></span><br>
-      <span>Product ID:</span><br>
-      <span id="productEditId"></span><br>
-      <span>Product title:</span><br>
-      <input type="text" name="productTitle" placeholder="Wooden Duck"><br>
-      <span>Alternative title (for image):</span><br>
-      <input type="text" name="altProductTitle" placeholder="Wooden Duck"><br>
-      <span>Category:</span><br>
-      <span>Select a category:</span>
-      <select id="editCategories" class="product-edit-category"></select><br>
-      <span>Enter a new category. <br>This will replace the existing one (new category icon must be uploaded)</span><br>
-      <input type="text" name="newProductCategory" placeholder="New category"><br>
-      <span>Description:</span><br>
-      <textarea rows="5" cols="30" maxlength="121" name="productDescription"></textarea><br>
-      <span>Price:</span><br>
-      <input type="number" name="productPrice" step="0.01"><br>
-      <button type="submit" id="btn-editProduct" class="btn-blue">Apply changes</button>
-  </form> -->
 </div>
 
   <div class='container'>
     <h1>Products</h1>
-    <div class="err-container"></div>
     <table id='products-table'>  
     <tr>
         <th>ID</th>
