--- a/public/checkOrder.html
+++ b/public/checkOrder.html
@@ -11,7 +11,7 @@
   </div>
   <a href="/">Store</a>
   <a href="/checkorder">Check order</a>
-  <a href="#" id="management">Administration</a>
+  <div class="nav-link" id="management">Administration</div>
 </div>
 
     <div class='container'>
