--- a/public/employeeLogin.html
+++ b/public/employeeLogin.html
@@ -10,7 +10,8 @@
     <div class="nav-log-out"></div>
   </div>
   <a href="/">Store</a>
-  <a href="/login">Administration</a>
+  <a href="/checkorder">Check order</a>
+  <div class="nav-link" id="management">Administration</div>
 </div>
 
     <div class='container'>
