--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,9 @@
       </div>
       <a href="/">Store</a>
       <a href="/checkorder">Check order</a>
-      <a href="#" id="management">Administration</a>
+      <div class="nav-link" id="management">Administration</div>
     </div>
+    
     <div class="floating-cart"><a href="#cart" class="floating-cart-text">Cart</a></div>
     <div class='container'>
       <h1>Catalog</h1>
