--- a/public/employeeLogin.html
+++ b/public/employeeLogin.html
@@ -22,7 +22,7 @@
                 <span>Enter your username:</span><br>
                 <input type="text" name="employeeUsername" id="employeeUsername" value="admin"><br>
                 <span>Enter your password:</span><br>
-                <input type="password" name="employeePassword" id="employeePassword" value="admin"><br>
+                <input type="password" name="employeePassword" id="employeePassword" value="password"><br>
             </form>
             <div id="login-btn" class="btn-blue">Login</div>
             <div class="errText"></div>
