--- a/public/index.html
+++ b/public/index.html
@@ -94,16 +94,16 @@
           <form class="order-details" id="sendOrder">
             <div class="formError"></div>
             <span><b>Enter your full name:*</b></span>
-            <input type="text" name="fullName" id="inputFullName" value="John Doe" required><br>
+            <input type="text" name="fullName" id="inputFullName" placeholder="John Doe" required><br>
             <span><b>Enter your e-mail*</b></span>
-            <input type="e-mail" name="email" id="inputEmail" value="username@someemail.com" required><br>
+            <input type="e-mail" name="email" id="inputEmail" placeholder="username@someemail.com" required><br>
             <span><b>Enter the shipping address:</b></span><br>
             <span>Address line 1:*</span>
-            <input type="textbox" name="address-line-one" id="inputAddOne" value="Main st. 1" required><br>
+            <input type="textbox" name="address-line-one" id="inputAddOne" placeholder="Main st. 1" required><br>
             <span>Address line 2:</span>
-            <input type="textbox" name="address-line-two" id="inputAddTwo" value="City, State, Country"><br>
+            <input type="textbox" name="address-line-two" id="inputAddTwo" placeholder="City, State, Country"><br>
             <div class="agreement-field">
-              <input type='checkbox' checked name="agreement" id="agreement">
+              <input type='checkbox' name="agreement" id="agreement">
               <label for="agreement">I agree with terms and agreements</label>
             </div>
             <span style="font-size:0.8em">* - required fields</span><br>
