--- a/public/users.html
+++ b/public/users.html
@@ -26,12 +26,12 @@
   <form id='user-add-form' class='product-form'>
       <div class="form-header">Add new user</div>
       <div class="form-line">User ID:<span id="userId"></span></div>
-      <div class="form-line">Username: <input type="text" id="username" value="demoUsername" maxlength="12"></div>
-      <div class="form-line">First name: <input type="text" id="firstName" value="John"></div>
-      <div class="form-line">Last name: <input type="text" id="lastName" value="Doe"></div>
+      <div class="form-line">Username: <input type="text" id="username" value="" maxlength="12"></div>
+      <div class="form-line">First name: <input type="text" id="firstName" value=""></div>
+      <div class="form-line">Last name: <input type="text" id="lastName" value=""></div>
       <div id="createPassword">
-        <div class="form-line">Enter your password: <input type="password" id="password" value="password"></div>
-        <div class="form-line">Repeat your password: <input type="password" id="repeatedPassword" value="password"></div> 
+        <div class="form-line">Enter your password: <input type="password" id="password" value=""></div>
+        <div class="form-line">Repeat your password: <input type="password" id="repeatedPassword" value=""></div> 
       </div>
       <div id="editPassword">
         <div class="form-line">Enter old password: <input type="password" id="oldPassword"></div>
