Some little look changes and fixed the remove from cart issue

--- a/public/checkOrder.html
+++ b/public/checkOrder.html
@@ -18,7 +18,7 @@
       <h1>Check your order status</h1>
       <form class="check-order" id="checkOrder">
         <span>Enter your Order ID:</span><br>
-        <input type="text" name="orderId" id="orderId" maxlength="10"><br>
+        <div class="form-line"><input type="text" name="orderId" id="orderId" maxlength="10"></div>
         <button type="submit" class="btn-blue btn-checkOrder">Check</button><br>
         <div class="responseBox"></div>
     </form>
