--- a/public/checkOrder.html
+++ b/public/checkOrder.html
@@ -9,9 +9,9 @@
     <a class="username" href="/dashboard"></a>
     <div class="nav-log-out"></div>
   </div>
-  <a href="/">Store</a>
-  <a href="/checkorder">Check order</a>
-  <div class="nav-link" id="management">Administration</div>
+  <a class="navbar-item" href="/">Store</a>
+  <a class="navbar-item" href="/checkorder">Check order</a>
+  <div class="nav-link navbar-item" id="management">Administration</div>
 </div>
 
     <div class='container'>
