--- a/public/employeeDashboard.html
+++ b/public/employeeDashboard.html
@@ -9,10 +9,10 @@
     <a class="username" href="/dashboard"></a>
     <div class="nav-log-out"></div>
   </div>
-  <a href="/">Back to store</a>
-  <a href="/orders">Orders</a>
-  <a href="/users">Users</a>
-  <a href="/products">Products</a>
+  <a class="navbar-item" href="/">Back to store</a>
+  <a class="navbar-item" href="/orders">Orders</a>
+  <a class="navbar-item" href="/users">Users</a>
+  <a class="navbar-item" href="/products">Products</a>
 </div>
 
   <div class='container'>
