--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,14 @@
         <a class="username" href="/dashboard"></a>
         <div class="nav-log-out"></div>
       </div>
-      <a href="/">Store</a>
-      <a href="/checkorder">Check order</a>
-      <div class="nav-link" id="management">Administration</div>
+      <a class="navbar-item" href="/">Store</a>
+      <a class="navbar-item" href="/checkorder">Check order</a>
+      <div class="nav-link navbar-item" id="management">Administration</div>
     </div>
-    
-    <div class="floating-cart"><a href="#cart" class="floating-cart-text">Cart</a></div>
+
+    <div class="floating-cart">
+      <div class="floating-cart-text">Cart</div>
+    </div>
     <div class='container'>
       <h1>Catalog</h1>
       <div class="pages-container">
